force-app/main/default/objects/Sustain_FuelTypeInformation__mdt/Sustain_FuelTypeInformation__mdt.object-meta.xml
<CustomObject>
    <label>Sustain_FuelTypeInformation</label>
    <pluralLabel>Sustain_FuelTypeInformations</pluralLabel>
</CustomObject>