force-app/main/default/objects/Sustain_FuelTypeInformation__mdt/fields/Field_Unit__c.field-meta.xml
<CustomField>
    <fullName>Field_Unit__c</fullName>
    <label>Field Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>