force-app/main/default/objects/Sustain_FuelTypeInformation__mdt/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>