force-app/main/default/objects/Sustain_FuelTypeInformation__mdt/fields/Parent_Total_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Total_Field__c</fullName>
    <label>Parent Total Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>