force-app/main/default/objects/Sustain_FuelTypeInformation__mdt/listViews/All_details.listView-meta.xml
<ListView>
    <fullName>All_details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Field_Name__c</columns>
    <columns>Fuel_Type__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Field_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>equals</operation>
        <value>sustain_app__BuildingEnergyIntensity__c</value>
    </filters>
    <label>All details</label>
</ListView>